--- a/src/styles/sass/pages/_login.scss
+++ b/src/styles/sass/pages/_login.scss
@@ -44,4 +44,8 @@
         border: 1px solid $btn-leading-border;
         color: $btn-leading-color;
     }
+
+    .landing-banner {
+        height: 600px;
+    }
 }
