--- a/src/styles/sass/partials/_header.scss
+++ b/src/styles/sass/partials/_header.scss
@@ -21,23 +21,51 @@
         }
     }
 
-    & .container > .navbar-text.navbar-right {
+    & .navbar-text.navbar-right {
         height: 70px;
         margin: 0px;
         display: inline-flex;
         align-items: center;
 
-    		& span {
-      			color: $navbar-text-color;
+		& p {
+  			color: $navbar-text-color;
             font-weight: 500;
             text-transform: uppercase;
             font-size: 0.8em;
             cursor: pointer;
+            margin: 0;
+        }
 
-            &:hover {
-              text-decoration: underline;
-            }
-    	}
+        &:hover {
+          text-decoration: underline;
+        }
+    }
+
+    .navbar-toggle {
+        margin-top: 18px;
+        margin-bottom: 18px;
+    }
+
+    & #tweet-navbar-collapse[aria-expanded="true"] {
+        background-color: rgba(0,0,0,0.5);
+        padding: 0px;
+
+        &:hover {
+            background-color: rgba(0,0,0,0.9);            
+        }
+
+        & .navbar-text {
+            width: 100%;
+        }
+
+        & p {
+            cursor: pointer;
+            margin: 0px;
+            height: 100%;
+            width: 100%;
+            line-height: 65px;
+            padding: 0 20px;
+        }
     }
 }
 
